add tests for UserManager